--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1>Portfolio de Nathan</h1>
-        <p>Parfois on se demande si c'est un humain.</p>
+        <p>I like coding.</p>
         <button id="night-mode-toggle" aria-label="Toggle Night Mode">🌙</button> <!-- Night Mode Button -->
     </header>
 
@@ -21,17 +21,17 @@
         <div class="projets-grid">
             <div class="projet-card">
                 <h3>Programmation d'un jeu en python</h3>
-                <p>Réalisés plusieurs fois, un don à travers de multiples pays pour aider ceux qui n'en n'ont pas.</p>
+                <p>Avec Pygame, j'ai participé à une 2 days game jam où j'ai un éditeur de map et un jeu platformer. Voici le lien vers le jeu et le code source : <a href="https://nather3d.itch.io/escape-the-dream">ici</a></p>
             </div>
 
             <div class="projet-card">
-                <h3>Création d'un système de codage</h3>
-                <p>Réalisés plusieurs fois, un don à travers de multiples pays pour aider ceux qui n'en n'ont pas.</p>
+                <h3>Création d'un site web pour le club informatique</h3>
+                <p>Joe et Nathan avons créent un site web que vous voyez ici pour représenter le club informatique du lycée.</p>
             </div>
 
             <div class="projet-card">
-                <h3>Réalisation d'un site web</h3>
-                <p>Réalisés plusieurs fois, un don à travers de multiples pays pour aider ceux qui n'en n'ont pas.</p>
+                <h3>Installation de Linux sur des PC</h3>
+                <p>Avec Redo Rescue, nous avons installé des linux sur des PC qui sont donnés à des élèves qui en ont besoin.</p>
             </div>
         </div>
     </section>
