--- a/index.html
+++ b/index.html
@@ -28,17 +28,16 @@
     <!-- Section présentation du club -->
     <section id="presentation">
         <h2>À propos du Club</h2>
-        <p>Le Club Informatique est un groupe passionné par l'informatique et la technologie. Nous nous réunissons pour
+        <p>Le Club Informatique est un groupe de lycéens passionnés par l'informatique et la technologie. Nous nous réunissons pour
             partager nos connaissances, travailler sur des projets innovants et aider la communauté.</p>
     </section>
 
     <!-- Section Google Form pour les demandes -->
     <section id="formulaire">
-        <h2>Besoin d'un PC Gratuit ?</h2>
-        <p>Nous donnons des ordinateurs gratuitement aux personnes qui en ont besoin. Vous pouvez aussi rejoindre notre
-            club !</p>
+        <h2>Tu veux rejoindre le club informatique ?</h2>
+        <p>Tu aimes les cartes graphiques, les pc et coder des jeux vidéos, clique sur le bouton en dessous ! <p>
         <a href="https://forms.gle/GFkRWejTQyq9hL3H9" target="_blank" class="cta-button">
-            Demander un PC Gratuit →
+            Rejoins le club informatique ->
         </a>
     </section>
 
@@ -119,4 +118,4 @@
 
 </body>
 
-</html>²
+</html>
