--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
     <section id="formulaire">
         <h2>Tu veux rejoindre le club informatique ?</h2>
         <p>Tu aimes les cartes graphiques, les pc et coder des jeux vidéos, clique sur le bouton en dessous ! <p>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSd_cAp15PC10cYF47uxO6UO8IXyZWpEhZtBS0Az4BFzmlKkaA/viewform?usp=header" target="_blank" class="cta-button">
+            Rejoins le club informatique ->
+        </a>
+    </section>
+
+    <!-- Section Google Form pour les demandes -->
+    <section id="formulaire">
+        <h2>Tu veux rejoindre le club informatique ?</h2>
+        <p>Tu aimes les cartes graphiques, les pc et coder des jeux vidéos, clique sur le bouton en dessous ! <p>
         <a href="https://forms.gle/GFkRWejTQyq9hL3H9" target="_blank" class="cta-button">
             Rejoins le club informatique ->
         </a>
