--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 
     <!-- Section Google Form pour les demandes -->
     <section id="formulaire">
-        <h2>Tu veux rejoindre le club informatique ?</h2>
-        <p>Tu aimes les cartes graphiques, les pc et coder des jeux vidéos, clique sur le bouton en dessous ! <p>
+        <h2>Besoin d'un PC, écran, clavier et souris ?</h2>
+        <p>Avec toutes les applications nécessaires pour réussir ton année, clique ci-dessous ! <p>
         <a href="https://forms.gle/GFkRWejTQyq9hL3H9" target="_blank" class="cta-button">
-            Rejoins le club informatique ->
+            Avoir un PC Gratuit ->
         </a>
     </section>
 
