--- a/AutresClubs/cafetaria_copy.html
+++ b/AutresClubs/cafetaria_copy.html
@@ -36,7 +36,12 @@
         <h1>Cafétaria</h1>
         <p class="header-subtitle">Du Lycée du Golfe de Saint-Tropez</p>  
     </header>
+
+    <section>
+        <img src="bruit.jpeg">
+    </section>
     
+
     <section> 
         <h2>SALADES COMPOSÉES (vinaigrette incluse) - 4,50€</h2>
         <ul>
