--- a/AutresClubs/cafetaria_copy.html
+++ b/AutresClubs/cafetaria_copy.html
@@ -38,7 +38,7 @@
     </header>
 
     <section>
-        <img src="bruit.jpeg">
+        <img src="bruit.jpeg" class="full">
     </section>
     
 
