--- a/AutresClubs/cafetaria_copy.html
+++ b/AutresClubs/cafetaria_copy.html
@@ -25,6 +25,10 @@
             width: 100%;
         }
 
+        img {
+            height: 100%;
+        }
+
         iframe{
             height: 100vh;
         }
